src/objects/npe5__Affiliation__c.object
<CustomObject>
    <fields>
        <fullName>npe5__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organization Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npe5__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npe5__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe5__Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliated Contacts</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npe5__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Affiliation&apos;s Organization will be stored on the Contact record.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe5__Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe5__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
            <fullName>Contact_Name__c</fullName>
            <description>Text formula field created so the Contact Name can appear in related lists in Lightning Experience and Salesforce1</description>
            <formula>npe5__Contact__r.FirstName &amp; &quot; &quot; &amp; npe5__Contact__r.LastName</formula>
            <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
            <inlineHelpText>Auto-created based on Contact First &amp; Last Name</inlineHelpText>
            <label>Contact Name</label>
            <type>Text</type>
    </fields>    
    <fields>
        <fullName>npe5__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Related_Opportunity_Contact_Role__c</fullName>
        <description>When you create an Opportunity for the Organization in this Affiliation, NPSP assigns this Opportunity Contact Role to the affiliated Contact.</description>
        <inlineHelpText>When you create an Opportunity for the Organization in this Affiliation, NPSP assigns this Opportunity Contact Role to the affiliated Contact.</inlineHelpText>
        <label>Related Opportunity Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Soft Credit</fullName>
                </value>
                <value>
                    <fullName>Solicitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>